<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_senior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeniorFragment">

    <EditText
        android:id="@+id/inputNomeSenior"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/campo_nome"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/inputDataNascimentoSenior"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/campo_data_nasc"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@+id/inputNomeSenior"
        app:layout_constraintStart_toStartOf="@+id/inputNomeSenior"
        app:layout_constraintEnd_toEndOf="@+id/inputNomeSenior" />

    <EditText
        android:id="@+id/inputResidenciaSenior"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/campo_residencia"
        android:inputType="textPostalAddress"
        app:layout_constraintTop_toBottomOf="@+id/inputDataNascimentoSenior"
        app:layout_constraintStart_toStartOf="@+id/inputDataNascimentoSenior"
        app:layout_constraintEnd_toEndOf="@+id/inputDataNascimentoSenior" />

    <CheckBox
        android:id="@+id/checkSaudeSenior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/label_saude"
        app:layout_constraintTop_toBottomOf="@+id/inputResidenciaSenior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnRegistrarSenior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/botao_registrar"
        app:layout_constraintTop_toBottomOf="@+id/checkSaudeSenior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
